# simod-on-containers

./: .gitignore  README.md
deploy/docker-compose/: docker-compose.yaml
deploy/kind/: README.md  deployment.yaml  job-controller.yaml  k6.yaml  kind-cluster-1-worker.yaml  kind-cluster-2-workers.yaml  kind-cluster-3-workers.yaml  kind-cluster-4-workers.yaml  kind-cluster-control-plane.yaml  locust-scalability-payments.yaml  locust-scalability-travel-exp.yaml  locust-scalability-travel.yaml  locust.yaml  mongo.yaml  rabbitmq.yaml  roles.yaml  run.rb  run.sh  simod-http-autoscaling.yaml  simod-http.yaml
deploy/kind/cluster-autoscaler/: README.md  capi-simod.kubeconfig  capi-simod.yaml  cluster-autoscaler.yaml  machine-deployment.yaml
deploy/kube/: deployment.yaml  run.rb
etais/ansible/: README.md  inventory.yaml
etais/ansible/attempt-1/: k8s-network.yaml  k8s-setup-non-root-user.yaml  k8s-setup.yaml
etais/ansible/attempt-2/: k8s-master.yaml  k8s-setup.yaml  k8s-users.yaml
etais/ansible/attempt-3/: containerd.yaml  k8s.yaml  prepare.yaml
load-testing/k6/: Dockerfile  k6-load-test-1.js  run.sh
load-testing/locust/: Dockerfile  delete_prometheus_metric.sh  delete_simod_http_requests.sh  docker_build.sh  docker_run_local.sh  locustfile.py  prometheus_measures.py  pyproject.toml  run.sh  visualize.py  visualize_grafana.py
monitoring/grafana/: Simod-1678263737552.json  Simod-1678292203698.json  Simod-1678460352083.json  Simod-1682331550037.json
rabbitmq/: Dockerfile  rabbitmq.conf
src/services/simod-http/: README.md  pyproject.toml
(+8 files in other folders)
