[tool.poetry]
name = "locust-load-testing"
version = "0.1.0"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"
packages = [{include = "locust_load_testing"}]

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.15.0"
requests-toolbelt = "^0.10.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
