[tool.poetry]
name = "locust-load-testing"
version = "0.2.0"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
locust = "^2.15.0"
requests-toolbelt = "^0.10.1"
pandas = "^1.5.3"
matplotlib = "^3.7.1"
requests = "^2.28.2"
numpy = "^1.24.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
