[tool.poetry]
name = "simod-http"
version = "0.2.0"
description = "HTTP API for handling Simod jobs requests"
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"
packages = [{include = "simod_http"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.3"
pika = "^1.3.1"
fastapi = "^0.92.0"
pydantic = "^1.10.5"
uvicorn = "^0.20.0"

[tool.poetry.group.dev.dependencies]
pika-stubs = "^0.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
